Fix genre select input alignment; add prompts to date and state fields

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -86,3 +86,8 @@ a.add_fields {
   margin-left: 160px;
   padding-top: 5px;
 }
+
+/* artists index */
+#in_genres_chzn {
+  vertical-align: middle;
+}
